Add item to TODO.

--- a/TODO
+++ b/TODO
@@ -25,3 +25,4 @@
   static nixos management.
 - Better integrate MARKPATH links with basic linux utilities (like 'ls');
   include completion.
+- Consider incorporating suggestions found at https://alex.dzyoba.com/blog/vim-revamp/.
