--- a/TODO
+++ b/TODO
@@ -26,3 +26,4 @@
 - Better integrate MARKPATH links with basic linux utilities (like 'ls');
   include completion.
 - Consider incorporating suggestions found at https://alex.dzyoba.com/blog/vim-revamp/.
+- Consider untentacling i3 and rofi.
