Undo paren-escaping by execute-namespace, since they seem to affect only ncurses and otherwise, they flow through stdin/stdout pipelines without problems.

--- a/TODO
+++ b/TODO
@@ -29,3 +29,4 @@
 - Consider untentacling i3, rofi, and bash.
 - Change `ls -l` in bash functions like 'derefMark' to `readlink`.
 - Check whether namespaces/tag has access to bash fn 'inode'.
+- Add traceability to namespace actions.
