--- a/TODO
+++ b/TODO
@@ -30,6 +30,7 @@
 - Change `ls -l` in bash functions like 'derefMark' to `readlink`.
 - Check whether namespaces/tag has access to bash fn 'inode'.
 - Add traceability to namespace actions.
+- Modify prompt to indicate if PWD (or its immediate files) have notes
 
 - Consider upgrading to new verson of NixOS:
   https://nixos.org/nixos/manual/index.html#sec-upgrading
